planners/LPG/Parser/scan-ops_pddl.output
Useless nonterminals

   variable_star
   timed_adl_effect_plus


Useless rules

  174 variable_star: /* empty */
  175              | VARIABLE variable_star

  176 timed_adl_effect_plus: timed_adl_effect
  177                      | timed_adl_effect timed_adl_effect_plus


Rules never reduced

  154 binary_op: MINUS_TOK

  170 d_value: num_exp


State 102 conflicts: 1 reduce/reduce
State 139 conflicts: 1 shift/reduce
State 151 conflicts: 7 reduce/reduce
State 216 conflicts: 2 shift/reduce
State 217 conflicts: 2 shift/reduce
State 240 conflicts: 3 shift/reduce
State 242 conflicts: 4 shift/reduce
State 244 conflicts: 3 shift/reduce
State 246 conflicts: 3 shift/reduce
State 313 conflicts: 1 reduce/reduce
State 360 conflicts: 4 shift/reduce
State 361 conflicts: 5 shift/reduce
State 362 conflicts: 4 shift/reduce
State 363 conflicts: 4 shift/reduce
State 373 conflicts: 1 shift/reduce
State 378 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 @1: /* empty */

    2 file: @1 domain_definition

    3 @2: /* empty */

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name @2 optional_domain_defs

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME CLOSE_PAREN

    6 optional_domain_defs: CLOSE_PAREN
    7                     | require_def optional_domain_defs
    8                     | constants_def optional_domain_defs
    9                     | types_def optional_domain_defs
   10                     | action_def optional_domain_defs
   11                     | predicates_def optional_domain_defs
   12                     | durative_action_def optional_domain_defs
   13                     | functions_def optional_domain_defs
   14                     | derived_def optional_domain_defs

   15 @3: /* empty */

   16 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list @3 CLOSE_PAREN

   17 predicates_list: /* empty */

   18 @4: /* empty */

   19 predicates_list: OPEN_PAREN NAME typed_list_variable CLOSE_PAREN @4 predicates_list

   20 @5: /* empty */

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list @5 CLOSE_PAREN

   22 functions_list: /* empty */

   23 @6: /* empty */

   24 functions_list: OPEN_PAREN NAME typed_list_variable CLOSE_PAREN @6 functions_list

   25 @7: /* empty */

   26 functions_list: OPEN_PAREN NAME typed_list_variable CLOSE_PAREN type @7 functions_list

   27 @8: /* empty */

   28 @9: /* empty */

   29 require_def: OPEN_PAREN REQUIREMENTS_TOK @8 NAME @9 require_key_star CLOSE_PAREN

   30 require_key_star: /* empty */

   31 @10: /* empty */

   32 require_key_star: NAME @10 require_key_star

   33 @11: /* empty */

   34 types_def: OPEN_PAREN TYPES_TOK @11 typed_list_name CLOSE_PAREN

   35 @12: /* empty */

   36 constants_def: OPEN_PAREN CONSTANTS_TOK @12 typed_list_name CLOSE_PAREN

   37 @13: /* empty */

   38 @14: /* empty */

   39 action_def: OPEN_PAREN ACTION_TOK @13 NAME @14 param_def action_def_body CLOSE_PAREN

   40 param_def: /* empty */
   41          | PARAMETERS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN

   42 action_def_body: /* empty */
   43                | VARS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN action_def_body

   44 @15: /* empty */

   45 action_def_body: PRECONDITION_TOK adl_goal_description @15 action_def_body

   46 @16: /* empty */

   47 action_def_body: EFFECT_TOK adl_effect @16 action_def_body

   48 adl_goal_description: literal_term
   49                     | OPEN_PAREN AND_TOK adl_goal_description_star CLOSE_PAREN
   50                     | OPEN_PAREN OR_TOK adl_goal_description_star CLOSE_PAREN
   51                     | OPEN_PAREN NOT_TOK adl_goal_description CLOSE_PAREN
   52                     | OPEN_PAREN IMPLY_TOK adl_goal_description adl_goal_description CLOSE_PAREN
   53                     | OPEN_PAREN EXISTS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN
   54                     | OPEN_PAREN FORALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN
   55                     | f_comp

   56 f_comp: OPEN_PAREN binary_comp f_exp f_exp CLOSE_PAREN

   57 f_exp: num_exp
   58      | OPEN_PAREN MINUS_TOK f_exp CLOSE_PAREN
   59      | OPEN_PAREN MINUS_TOK f_exp f_exp CLOSE_PAREN
   60      | OPEN_PAREN PLUS_TOK f_exp f_exp CLOSE_PAREN
   61      | OPEN_PAREN MUL_TOK f_exp f_exp CLOSE_PAREN
   62      | OPEN_PAREN DIV_TOK f_exp f_exp CLOSE_PAREN
   63      | f_head
   64      | number

   65 f_head: OPEN_PAREN function_symbol term_star CLOSE_PAREN
   66       | function_symbol

   67 binary_comp: GREATER_TOK
   68            | LESS_THAN_TOK
   69            | EQUAL_TOK
   70            | GREATER_OR_EQUAL_TOK
   71            | LESS_THAN_OR_EQUAL_TOK

   72 num_exp: OPEN_PAREN MINUS_TOK num_exp CLOSE_PAREN
   73        | OPEN_PAREN MINUS_TOK num_exp num_exp CLOSE_PAREN
   74        | OPEN_PAREN PLUS_TOK num_exp num_exp CLOSE_PAREN
   75        | OPEN_PAREN MUL_TOK num_exp num_exp CLOSE_PAREN
   76        | OPEN_PAREN DIV_TOK num_exp num_exp CLOSE_PAREN
   77        | number

   78 number: INTVAL
   79       | FLOATVAL

   80 function_symbol: NAME

   81 assign_op: ASSIGN_TOK
   82          | SCALE_UP_TOK
   83          | SCALE_DOWN_TOK
   84          | INCREASE_TOK
   85          | DECREASE_TOK

   86 adl_goal_description_star: /* empty */
   87                          | adl_goal_description adl_goal_description_star

   88 adl_effect: literal_term
   89           | OPEN_PAREN AND_TOK adl_effect_star CLOSE_PAREN
   90           | OPEN_PAREN FORALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_effect CLOSE_PAREN
   91           | OPEN_PAREN WHEN_TOK adl_goal_description adl_effect CLOSE_PAREN
   92           | OPEN_PAREN assign_op f_head f_exp CLOSE_PAREN

   93 adl_effect_star: /* empty */
   94                | adl_effect adl_effect_star

   95 literal_term: OPEN_PAREN NOT_TOK atomic_formula_term CLOSE_PAREN
   96             | atomic_formula_term

   97 atomic_formula_term: OPEN_PAREN predicate term_star CLOSE_PAREN

   98 term_star: /* empty */
   99          | term term_star

  100 term: NAME
  101     | VARIABLE

  102 name_plus: NAME
  103          | NAME name_plus

  104 predicate: NAME
  105          | EQUAL_TOK

  106 typed_list_name: /* empty */
  107                | NAME either name_plus CLOSE_PAREN typed_list_name
  108                | NAME type typed_list_name
  109                | NAME typed_list_name

  110 typed_list_variable: /* empty */
  111                    | VARIABLE either name_plus CLOSE_PAREN typed_list_variable
  112                    | VARIABLE type typed_list_variable
  113                    | VARIABLE typed_list_variable

  114 @17: /* empty */

  115 @18: /* empty */

  116 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK @17 NAME @18 param_def durative_action_def_body CLOSE_PAREN

  117 durative_action_def_body: /* empty */
  118                         | VARS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN durative_action_def_body

  119 @19: /* empty */

  120 durative_action_def_body: DURATION_TOK duration_constraint @19 durative_action_def_body

  121 @20: /* empty */

  122 durative_action_def_body: CONDITION_TOK da_adl_goal_description @20 durative_action_def_body

  123 @21: /* empty */

  124 durative_action_def_body: EFFECT_TOK da_adl_effect @21 durative_action_def_body

  125 @22: /* empty */

  126 derived_def: OPEN_PAREN DERIVED_TOK @22 derived_predicate_def adl_goal_description CLOSE_PAREN

  127 derived_predicate_def: OPEN_PAREN predicate typed_list_variable CLOSE_PAREN

  128 da_adl_goal_description: timed_adl_goal_description
  129                        | OPEN_PAREN AND_TOK timed_adl_goal_description_plus CLOSE_PAREN

  130 timed_adl_goal_description_plus: timed_adl_goal_description
  131                                | timed_adl_goal_description timed_adl_goal_description_plus

  132 timed_adl_goal_description: OPEN_PAREN AT_START adl_goal_description CLOSE_PAREN
  133                           | OPEN_PAREN AT_END adl_goal_description CLOSE_PAREN
  134                           | OPEN_PAREN OVER_ALL adl_goal_description CLOSE_PAREN

  135 da_adl_effect_star: /* empty */
  136                   | da_adl_effect da_adl_effect_star

  137 da_adl_effect: OPEN_PAREN AND_TOK da_adl_effect_star CLOSE_PAREN
  138              | timed_adl_effect
  139              | OPEN_PAREN FORALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN da_adl_effect CLOSE_PAREN
  140              | OPEN_PAREN WHEN_TOK da_adl_goal_description da_adl_effect CLOSE_PAREN
  141              | OPEN_PAREN assign_op f_head f_exp_da CLOSE_PAREN

  142 timed_adl_effect: OPEN_PAREN AT_START adl_effect CLOSE_PAREN
  143                 | OPEN_PAREN AT_END adl_effect CLOSE_PAREN
  144                 | OPEN_PAREN AT_START f_assign_da CLOSE_PAREN
  145                 | OPEN_PAREN AT_END f_assign_da CLOSE_PAREN
  146                 | OPEN_PAREN INCREASE_TOK f_head f_exp_t CLOSE_PAREN
  147                 | OPEN_PAREN DECREASE_TOK f_head f_exp_t CLOSE_PAREN

  148 f_assign_da: OPEN_PAREN assign_op f_head f_exp_da CLOSE_PAREN

  149 f_exp_da: OPEN_PAREN binary_op f_exp_da f_exp_da CLOSE_PAREN
  150         | OPEN_PAREN MINUS_TOK f_exp_da CLOSE_PAREN
  151         | DURATION_VAR_TOK
  152         | f_exp

  153 binary_op: PLUS_TOK
  154          | MINUS_TOK
  155          | MUL_TOK
  156          | DIV_TOK

  157 f_exp_t: OPEN_PAREN MUL_TOK f_exp TIME_TOK CLOSE_PAREN
  158        | OPEN_PAREN MUL_TOK TIME_TOK f_exp CLOSE_PAREN
  159        | TIME_TOK

  160 duration_constraint: OPEN_PAREN AND_TOK simple_duration_constraint_plus CLOSE_PAREN
  161                    | simple_duration_constraint

  162 simple_duration_constraint_plus: simple_duration_constraint
  163                                | simple_duration_constraint simple_duration_constraint_plus

  164 simple_duration_constraint: OPEN_PAREN d_op DURATION_VAR_TOK d_value CLOSE_PAREN
  165                           | OPEN_PAREN AT_START simple_duration_constraint CLOSE_PAREN
  166                           | OPEN_PAREN AT_END simple_duration_constraint CLOSE_PAREN

  167 d_op: LESS_THAN_OR_EQUAL_TOK
  168     | GREATER_OR_EQUAL_TOK
  169     | EQUAL_TOK

  170 d_value: num_exp
  171        | f_exp

  172 type: MINUS_TOK NAME

  173 either: MINUS_TOK OPEN_PAREN EITHER_TOK


Terminals, with rules where they appear

$end (0) 0
error (256)
DEFINE_TOK (258) 4
DOMAIN_TOK (259) 5
REQUIREMENTS_TOK (260) 29
TYPES_TOK (261) 34
EITHER_TOK (262) 173
CONSTANTS_TOK (263) 36
PREDICATES_TOK (264) 16
FUNCTIONS_TOK (265) 21
DURATIVE_ACTION_TOK (266) 116
CONDITION_TOK (267) 122
DURATION_TOK (268) 120
DURATION_VAR_TOK (269) 151 164
AT_START (270) 132 142 144 165
AT_END (271) 133 143 145 166
OVER_ALL (272) 134
INCREASE_TOK (273) 84 146
DECREASE_TOK (274) 85 147
TIME_TOK (275) 157 158 159
GREATER_OR_EQUAL_TOK (276) 70 168
LESS_THAN_OR_EQUAL_TOK (277) 71 167
INTVAL (278) 78
FLOATVAL (279) 79
ASSIGN_TOK (280) 81
SCALE_UP_TOK (281) 82
SCALE_DOWN_TOK (282) 83
PLUS_TOK (283) 60 74 153
MINUS_TOK (284) 58 59 72 73 150 154 172 173
MUL_TOK (285) 61 75 155 157 158
DIV_TOK (286) 62 76 156
EQUAL_TOK (287) 69 105 169
GREATER_TOK (288) 67
LESS_THAN_TOK (289) 68
ACTION_TOK (290) 39
VARS_TOK (291) 43 118
DERIVED_TOK (292) 126
PRECONDITION_TOK (293) 45
PARAMETERS_TOK (294) 41
EFFECT_TOK (295) 47 124
AND_TOK (296) 49 89 129 137 160
NOT_TOK (297) 51 95
WHEN_TOK (298) 91 140
FORALL_TOK (299) 54 90 139
IMPLY_TOK (300) 52
OR_TOK (301) 50
EXISTS_TOK (302) 53
NAME (303) 5 19 24 26 29 32 39 80 100 102 103 104 107 108 109 116 172
VARIABLE (304) 101 111 112 113
OPEN_PAREN (305) 4 5 16 19 21 24 26 29 34 36 39 41 43 49 50 51 52 53
    54 56 58 59 60 61 62 65 72 73 74 75 76 89 90 91 92 95 97 116 118
    126 127 129 132 133 134 137 139 140 141 142 143 144 145 146 147
    148 149 150 157 158 160 164 165 166 173
CLOSE_PAREN (306) 5 6 16 19 21 24 26 29 34 36 39 41 43 49 50 51 52
    53 54 56 58 59 60 61 62 65 72 73 74 75 76 89 90 91 92 95 97 107
    111 116 118 126 127 129 132 133 134 137 139 140 141 142 143 144
    145 146 147 148 149 150 157 158 160 164 165 166
UMINUS (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
file (54)
    on left: 2, on right: 0
@1 (55)
    on left: 1, on right: 2
domain_definition (56)
    on left: 4, on right: 2
@2 (57)
    on left: 3, on right: 4
domain_name (58)
    on left: 5, on right: 4
optional_domain_defs (59)
    on left: 6 7 8 9 10 11 12 13 14, on right: 4 7 8 9 10 11 12 13
    14
predicates_def (60)
    on left: 16, on right: 11
@3 (61)
    on left: 15, on right: 16
predicates_list (62)
    on left: 17 19, on right: 16 19
@4 (63)
    on left: 18, on right: 19
functions_def (64)
    on left: 21, on right: 13
@5 (65)
    on left: 20, on right: 21
functions_list (66)
    on left: 22 24 26, on right: 21 24 26
@6 (67)
    on left: 23, on right: 24
@7 (68)
    on left: 25, on right: 26
require_def (69)
    on left: 29, on right: 7
@8 (70)
    on left: 27, on right: 29
@9 (71)
    on left: 28, on right: 29
require_key_star (72)
    on left: 30 32, on right: 29 32
@10 (73)
    on left: 31, on right: 32
types_def (74)
    on left: 34, on right: 9
@11 (75)
    on left: 33, on right: 34
constants_def (76)
    on left: 36, on right: 8
@12 (77)
    on left: 35, on right: 36
action_def (78)
    on left: 39, on right: 10
@13 (79)
    on left: 37, on right: 39
@14 (80)
    on left: 38, on right: 39
param_def (81)
    on left: 40 41, on right: 39 116
action_def_body (82)
    on left: 42 43 45 47, on right: 39 43 45 47
@15 (83)
    on left: 44, on right: 45
@16 (84)
    on left: 46, on right: 47
adl_goal_description (85)
    on left: 48 49 50 51 52 53 54 55, on right: 45 51 52 53 54 87 91
    126 132 133 134
f_comp (86)
    on left: 56, on right: 55
f_exp (87)
    on left: 57 58 59 60 61 62 63 64, on right: 56 58 59 60 61 62 92
    152 157 158 171
f_head (88)
    on left: 65 66, on right: 63 92 141 146 147 148
binary_comp (89)
    on left: 67 68 69 70 71, on right: 56
num_exp (90)
    on left: 72 73 74 75 76 77, on right: 57 72 73 74 75 76 170
number (91)
    on left: 78 79, on right: 64 77
function_symbol (92)
    on left: 80, on right: 65 66
assign_op (93)
    on left: 81 82 83 84 85, on right: 92 141 148
adl_goal_description_star (94)
    on left: 86 87, on right: 49 50 87
adl_effect (95)
    on left: 88 89 90 91 92, on right: 47 90 91 94 142 143
adl_effect_star (96)
    on left: 93 94, on right: 89 94
literal_term (97)
    on left: 95 96, on right: 48 88
atomic_formula_term (98)
    on left: 97, on right: 95 96
term_star (99)
    on left: 98 99, on right: 65 97 99
term (100)
    on left: 100 101, on right: 99
name_plus (101)
    on left: 102 103, on right: 103 107 111
predicate (102)
    on left: 104 105, on right: 97 127
typed_list_name (103)
    on left: 106 107 108 109, on right: 34 36 107 108 109
typed_list_variable (104)
    on left: 110 111 112 113, on right: 19 24 26 41 43 53 54 90 111
    112 113 118 127 139
durative_action_def (105)
    on left: 116, on right: 12
@17 (106)
    on left: 114, on right: 116
@18 (107)
    on left: 115, on right: 116
durative_action_def_body (108)
    on left: 117 118 120 122 124, on right: 116 118 120 122 124
@19 (109)
    on left: 119, on right: 120
@20 (110)
    on left: 121, on right: 122
@21 (111)
    on left: 123, on right: 124
derived_def (112)
    on left: 126, on right: 14
@22 (113)
    on left: 125, on right: 126
derived_predicate_def (114)
    on left: 127, on right: 126
da_adl_goal_description (115)
    on left: 128 129, on right: 122 140
timed_adl_goal_description_plus (116)
    on left: 130 131, on right: 129 131
timed_adl_goal_description (117)
    on left: 132 133 134, on right: 128 130 131
da_adl_effect_star (118)
    on left: 135 136, on right: 136 137
da_adl_effect (119)
    on left: 137 138 139 140 141, on right: 124 136 139 140
timed_adl_effect (120)
    on left: 142 143 144 145 146 147, on right: 138
f_assign_da (121)
    on left: 148, on right: 144 145
f_exp_da (122)
    on left: 149 150 151 152, on right: 141 148 149 150
binary_op (123)
    on left: 153 154 155 156, on right: 149
f_exp_t (124)
    on left: 157 158 159, on right: 146 147
duration_constraint (125)
    on left: 160 161, on right: 120
simple_duration_constraint_plus (126)
    on left: 162 163, on right: 160 163
simple_duration_constraint (127)
    on left: 164 165 166, on right: 161 162 163 165 166
d_op (128)
    on left: 167 168 169, on right: 164
d_value (129)
    on left: 170 171, on right: 164
type (130)
    on left: 172, on right: 26 108 112
either (131)
    on left: 173, on right: 107 111


state 0

    0 $accept: . file $end

    $default  reduce using rule 1 (@1)

    file  go to state 1
    @1    go to state 2


state 1

    0 $accept: file . $end

    $end  shift, and go to state 3


state 2

    2 file: @1 . domain_definition

    OPEN_PAREN  shift, and go to state 4

    domain_definition  go to state 5


state 3

    0 $accept: file $end .

    $default  accept


state 4

    4 domain_definition: OPEN_PAREN . DEFINE_TOK domain_name @2 optional_domain_defs

    DEFINE_TOK  shift, and go to state 6


state 5

    2 file: @1 domain_definition .

    $default  reduce using rule 2 (file)


state 6

    4 domain_definition: OPEN_PAREN DEFINE_TOK . domain_name @2 optional_domain_defs

    OPEN_PAREN  shift, and go to state 7

    domain_name  go to state 8


state 7

    5 domain_name: OPEN_PAREN . DOMAIN_TOK NAME CLOSE_PAREN

    DOMAIN_TOK  shift, and go to state 9


state 8

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name . @2 optional_domain_defs

    $default  reduce using rule 3 (@2)

    @2  go to state 10


state 9

    5 domain_name: OPEN_PAREN DOMAIN_TOK . NAME CLOSE_PAREN

    NAME  shift, and go to state 11


state 10

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name @2 . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 14
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 11

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 23


state 12

   16 predicates_def: OPEN_PAREN . PREDICATES_TOK predicates_list @3 CLOSE_PAREN
   21 functions_def: OPEN_PAREN . FUNCTIONS_TOK functions_list @5 CLOSE_PAREN
   29 require_def: OPEN_PAREN . REQUIREMENTS_TOK @8 NAME @9 require_key_star CLOSE_PAREN
   34 types_def: OPEN_PAREN . TYPES_TOK @11 typed_list_name CLOSE_PAREN
   36 constants_def: OPEN_PAREN . CONSTANTS_TOK @12 typed_list_name CLOSE_PAREN
   39 action_def: OPEN_PAREN . ACTION_TOK @13 NAME @14 param_def action_def_body CLOSE_PAREN
  116 durative_action_def: OPEN_PAREN . DURATIVE_ACTION_TOK @17 NAME @18 param_def durative_action_def_body CLOSE_PAREN
  126 derived_def: OPEN_PAREN . DERIVED_TOK @22 derived_predicate_def adl_goal_description CLOSE_PAREN

    REQUIREMENTS_TOK     shift, and go to state 24
    TYPES_TOK            shift, and go to state 25
    CONSTANTS_TOK        shift, and go to state 26
    PREDICATES_TOK       shift, and go to state 27
    FUNCTIONS_TOK        shift, and go to state 28
    DURATIVE_ACTION_TOK  shift, and go to state 29
    ACTION_TOK           shift, and go to state 30
    DERIVED_TOK          shift, and go to state 31


state 13

    6 optional_domain_defs: CLOSE_PAREN .

    $default  reduce using rule 6 (optional_domain_defs)


state 14

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name @2 optional_domain_defs .

    $default  reduce using rule 4 (domain_definition)


state 15

   11 optional_domain_defs: predicates_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 32
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 16

   13 optional_domain_defs: functions_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 33
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 17

    7 optional_domain_defs: require_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 34
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 18

    9 optional_domain_defs: types_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 35
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 19

    8 optional_domain_defs: constants_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 36
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 20

   10 optional_domain_defs: action_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 37
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 21

   12 optional_domain_defs: durative_action_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 38
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 22

   14 optional_domain_defs: derived_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 39
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 23

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME CLOSE_PAREN .

    $default  reduce using rule 5 (domain_name)


state 24

   29 require_def: OPEN_PAREN REQUIREMENTS_TOK . @8 NAME @9 require_key_star CLOSE_PAREN

    $default  reduce using rule 27 (@8)

    @8  go to state 40


state 25

   34 types_def: OPEN_PAREN TYPES_TOK . @11 typed_list_name CLOSE_PAREN

    $default  reduce using rule 33 (@11)

    @11  go to state 41


state 26

   36 constants_def: OPEN_PAREN CONSTANTS_TOK . @12 typed_list_name CLOSE_PAREN

    $default  reduce using rule 35 (@12)

    @12  go to state 42


state 27

   16 predicates_def: OPEN_PAREN PREDICATES_TOK . predicates_list @3 CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 43

    $default  reduce using rule 17 (predicates_list)

    predicates_list  go to state 44


state 28

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK . functions_list @5 CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 45

    $default  reduce using rule 22 (functions_list)

    functions_list  go to state 46


state 29

  116 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK . @17 NAME @18 param_def durative_action_def_body CLOSE_PAREN

    $default  reduce using rule 114 (@17)

    @17  go to state 47


state 30

   39 action_def: OPEN_PAREN ACTION_TOK . @13 NAME @14 param_def action_def_body CLOSE_PAREN

    $default  reduce using rule 37 (@13)

    @13  go to state 48


state 31

  126 derived_def: OPEN_PAREN DERIVED_TOK . @22 derived_predicate_def adl_goal_description CLOSE_PAREN

    $default  reduce using rule 125 (@22)

    @22  go to state 49


state 32

   11 optional_domain_defs: predicates_def optional_domain_defs .

    $default  reduce using rule 11 (optional_domain_defs)


state 33

   13 optional_domain_defs: functions_def optional_domain_defs .

    $default  reduce using rule 13 (optional_domain_defs)


state 34

    7 optional_domain_defs: require_def optional_domain_defs .

    $default  reduce using rule 7 (optional_domain_defs)


state 35

    9 optional_domain_defs: types_def optional_domain_defs .

    $default  reduce using rule 9 (optional_domain_defs)


state 36

    8 optional_domain_defs: constants_def optional_domain_defs .

    $default  reduce using rule 8 (optional_domain_defs)


state 37

   10 optional_domain_defs: action_def optional_domain_defs .

    $default  reduce using rule 10 (optional_domain_defs)


state 38

   12 optional_domain_defs: durative_action_def optional_domain_defs .

    $default  reduce using rule 12 (optional_domain_defs)


state 39

   14 optional_domain_defs: derived_def optional_domain_defs .

    $default  reduce using rule 14 (optional_domain_defs)


state 40

   29 require_def: OPEN_PAREN REQUIREMENTS_TOK @8 . NAME @9 require_key_star CLOSE_PAREN

    NAME  shift, and go to state 50


state 41

   34 types_def: OPEN_PAREN TYPES_TOK @11 . typed_list_name CLOSE_PAREN

    NAME  shift, and go to state 51

    $default  reduce using rule 106 (typed_list_name)

    typed_list_name  go to state 52


state 42

   36 constants_def: OPEN_PAREN CONSTANTS_TOK @12 . typed_list_name CLOSE_PAREN

    NAME  shift, and go to state 51

    $default  reduce using rule 106 (typed_list_name)

    typed_list_name  go to state 53


state 43

   19 predicates_list: OPEN_PAREN . NAME typed_list_variable CLOSE_PAREN @4 predicates_list

    NAME  shift, and go to state 54


state 44

   16 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list . @3 CLOSE_PAREN

    $default  reduce using rule 15 (@3)

    @3  go to state 55


state 45

   24 functions_list: OPEN_PAREN . NAME typed_list_variable CLOSE_PAREN @6 functions_list
   26               | OPEN_PAREN . NAME typed_list_variable CLOSE_PAREN type @7 functions_list

    NAME  shift, and go to state 56


state 46

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list . @5 CLOSE_PAREN

    $default  reduce using rule 20 (@5)

    @5  go to state 57


state 47

  116 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK @17 . NAME @18 param_def durative_action_def_body CLOSE_PAREN

    NAME  shift, and go to state 58


state 48

   39 action_def: OPEN_PAREN ACTION_TOK @13 . NAME @14 param_def action_def_body CLOSE_PAREN

    NAME  shift, and go to state 59


state 49

  126 derived_def: OPEN_PAREN DERIVED_TOK @22 . derived_predicate_def adl_goal_description CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 60

    derived_predicate_def  go to state 61


state 50

   29 require_def: OPEN_PAREN REQUIREMENTS_TOK @8 NAME . @9 require_key_star CLOSE_PAREN

    $default  reduce using rule 28 (@9)

    @9  go to state 62


state 51

  107 typed_list_name: NAME . either name_plus CLOSE_PAREN typed_list_name
  108                | NAME . type typed_list_name
  109                | NAME . typed_list_name

    MINUS_TOK  shift, and go to state 63
    NAME       shift, and go to state 51

    $default  reduce using rule 106 (typed_list_name)

    typed_list_name  go to state 64
    type             go to state 65
    either           go to state 66


state 52

   34 types_def: OPEN_PAREN TYPES_TOK @11 typed_list_name . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 67


state 53

   36 constants_def: OPEN_PAREN CONSTANTS_TOK @12 typed_list_name . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 68


state 54

   19 predicates_list: OPEN_PAREN NAME . typed_list_variable CLOSE_PAREN @4 predicates_list

    VARIABLE  shift, and go to state 69

    $default  reduce using rule 110 (typed_list_variable)

    typed_list_variable  go to state 70


state 55

   16 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list @3 . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 71


state 56

   24 functions_list: OPEN_PAREN NAME . typed_list_variable CLOSE_PAREN @6 functions_list
   26               | OPEN_PAREN NAME . typed_list_variable CLOSE_PAREN type @7 functions_list

    VARIABLE  shift, and go to state 69

    $default  reduce using rule 110 (typed_list_variable)

    typed_list_variable  go to state 72


state 57

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list @5 . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 73


state 58

  116 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK @17 NAME . @18 param_def durative_action_def_body CLOSE_PAREN

    $default  reduce using rule 115 (@18)

    @18  go to state 74


state 59

   39 action_def: OPEN_PAREN ACTION_TOK @13 NAME . @14 param_def action_def_body CLOSE_PAREN

    $default  reduce using rule 38 (@14)

    @14  go to state 75


state 60

  127 derived_predicate_def: OPEN_PAREN . predicate typed_list_variable CLOSE_PAREN

    EQUAL_TOK  shift, and go to state 76
    NAME       shift, and go to state 77

    predicate  go to state 78


state 61

  126 derived_def: OPEN_PAREN DERIVED_TOK @22 derived_predicate_def . adl_goal_description CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 79

    adl_goal_description  go to state 80
    f_comp                go to state 81
    literal_term          go to state 82
    atomic_formula_term   go to state 83


state 62

   29 require_def: OPEN_PAREN REQUIREMENTS_TOK @8 NAME @9 . require_key_star CLOSE_PAREN

    NAME  shift, and go to state 84

    $default  reduce using rule 30 (require_key_star)

    require_key_star  go to state 85


state 63

  172 type: MINUS_TOK . NAME
  173 either: MINUS_TOK . OPEN_PAREN EITHER_TOK

    NAME        shift, and go to state 86
    OPEN_PAREN  shift, and go to state 87


state 64

  109 typed_list_name: NAME typed_list_name .

    $default  reduce using rule 109 (typed_list_name)


state 65
